# Archon

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  startup.sh
.github/workflows/: ci-cd.yml
examples/: ollama_usage.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: GraphVisualization.jsx  Layout.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/pages/: Dashboard.jsx  Graphs.jsx  Login.jsx  Reports.jsx  Research.jsx  Settings.jsx
frontend/src/services/: api.js
frontend/src/stores/: useStore.js
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: init_databases.py
src/: __init__.py  cli.py  main.py  requirements.txt
src/agents/: __init__.py  academic_search.py  citation_agent.py  document_search.py  fact_checker.py  planner.py  reviewer.py  web_search.py  workflow.py  writer.py
src/api/: __init__.py  dependencies.py  middleware.py  routes.py  schemas.py  server.py
src/api/routes/: __init__.py  admin.py  auth.py  documents.py  graphs.py  reports.py  research.py
src/core/: __init__.py  base.py  config.py  exceptions.py  logger.py  metrics.py  security.py  types.py
src/integration/: __init__.py  chromadb_client.py  citation_engine.py  doc_processor.py  groq_client.py  neo4j_client.py  ollama.py  ollama_client.py  redis_client.py  search_api.py  search_clients.py
src/models/: __init__.py
src/retrieval/: __init__.py  entity_extractor.py  graphrag.py  hybrid.py  rag.py  triple_extractor.py
src/schemas/: __init__.py
src/services/: __init__.py  document_processor.py  embedding_service.py  llm_service.py  retrieval_service.py  search_service.py
tests/integration/: test_databases.py  test_llm.py  test_phase4_rag.py
tests/unit/: test_security.py
